[Fix] 4465 - Change Service organisationnel to circuit de validation

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -104,7 +104,7 @@
                             <option value="0" {% if classeur.visibilite == 0 %} selected="selected" {% endif %}>Privé</option>
                             <option value="1" {% if classeur.visibilite == 1 %} selected="selected" {% endif %}>Public</option>
                             {% if classeur.visibilite == 3 %}
-                                <option value="3" selected="selected">Pour le service organisationnel</option>
+                                <option value="3" selected="selected">Pour le circuit de validation</option>
                             {% endif %}
                         </select>
                     </div>
@@ -265,7 +265,7 @@
                             <option value="0" {% if classeur.visibilite == 0 %} selected="selected" {% endif %}>Privé</option>
                             <option value="1" {% if classeur.visibilite == 1 %} selected="selected" {% endif %}>Public</option>
                             {% if classeur.visibilite == 3 %}
-                                <option value="3" selected="selected">Pour le service organisationnel</option>
+                                <option value="3" selected="selected">Pour le circuit de validation</option>
                             {% endif %}
                         </select>
                     </div>
