--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-lg-3">
         <select class="fuckingvisibility form-control" id="visibilite" name="visibilite">
-            <option value="3">Pour le service organisationnel</option>
+            <option value="3">Pour le circuit de validation</option>
             <option value="0">Privé</option>
             <option value="1">Public</option>
             {#<option value="2">Privé à partir de moi</option>#}
