--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/index.html.twig
@@ -33,7 +33,7 @@
         </table>
         <a href="{{ path("create_service") }}">
             <button type="button" class="btn btn-default navbar-btn">
-                Ajouter un service organisationnel
+                Ajouter un circuit de validation
             </button>
         </a>
         <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
