--- a/src/Sesile/UserBundle/Resources/views/SO/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/edit.html.twig
@@ -4,7 +4,7 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-floppy-saved"></span>
-            &nbsp;&nbsp;&nbsp;Editer un service organisationnel
+            &nbsp;&nbsp;&nbsp;Editer un circuit de validation
         </div>
 
         <form action="{{ path('modify_serviceorg', {id:service.id}) }}" class="form-horizontal" method="post" id="form">
