--- a/src/Sesile/UserBundle/Resources/views/SO/new.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/SO/new.html.twig
@@ -4,15 +4,15 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-floppy-saved"></span>
-            &nbsp;&nbsp;&nbsp;Créer un service organisationnel
+            &nbsp;&nbsp;&nbsp;Créer un circuit de validation
         </div>
         <div class="alert alert-danger alert-dismissible" style="display: none" id="stepAlert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            Le service organisationnel doit comporter des utilisateurs
+            Le circuit de validation doit comporter des utilisateurs
         </div>
         <div class="alert alert-danger alert-dismissible" style="display: none" id="typeAlert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            Le service organisationnel doit être lié à au moins un type de classeur
+            Le circuit de validation doit être lié à au moins un type de classeur
         </div>
         <form action="{{ path('create_serviceorg') }}" class="form-horizontal" method="post" id="form">
 
