--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -17,7 +17,7 @@
                     <div class="col-lg-12">
                         <div class="titre_form_element">
                             <span class="glyphicon glyphicon-play"></span>
-                            &nbsp;&nbsp;&nbsp;Service organisationnel
+                            &nbsp;&nbsp;&nbsp;Circuit de validation
                         </div>
                     </div>
                     <div class="col-lg-12">
