--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
@@ -19,10 +19,10 @@
 		&nbsp;&nbsp;&nbsp;Organigramme
 	    {% elseif groupe is defined %}
 		<span class="glyphicon glyphicon-floppy-open"></span>
-		&nbsp;&nbsp;&nbsp;Éditer un service organisationnel
+		&nbsp;&nbsp;&nbsp;Éditer un circuit de validation
 	    {% else %}
 		<span class="glyphicon glyphicon-floppy-disk"></span>
-		&nbsp;&nbsp;&nbsp;Créer un service organisationnel
+		&nbsp;&nbsp;&nbsp;Créer un circuit de validation
 	    {% endif %}
 	</div>
 	{% include 'SesileUserBundle:Hierarchie:legende.organigramme.html.twig' %}
