[Evo] Ref#4998 - CheckAll classeur à valider

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -23,6 +23,7 @@ $button-palette: map-merge($foundation-palette, (
 $title-color: #797c92;
 $sesile-color-1: #3299CC;
 $sesile-color-2: #CC0066;
+$pretty--color-info: #CC0066 !default;
 $sesile-color-3: #676766;
 $sesile-color: (
         dark-blue: #4a4c63,
