[Evo] Ref #5164 - Disabel all command in classeur during signature

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -1286,6 +1286,11 @@ select {
   background-color: map-get($foundation-palette, 'alert');
 }
 
+.ui.progressSign.label {
+  border-color: map-get($foundation-palette-hover, 'primary');
+  background-color: map-get($foundation-palette, 'primary');
+}
+
 .fa.success {
   color: map-get($foundation-palette, 'success');
 }
