[Fix] Ref#5175 - Fix error report by Chrome audits
[Fix] Ref#5175 - change alt name


[Evo] Ref#5175 - change alt name bis


[Evo] Ref#5175 - multiple same id

--- a/app/Resources/views/app.html.twig
+++ b/app/Resources/views/app.html.twig
@@ -1,6 +1,7 @@
 {# base.html.twig #}
 <!DOCTYPE html>
-<html>
+<html lang="FR">
+    <title>Sesile</title>
     <head>
         <link rel="stylesheet" href="{{ asset('build/global.css') }}">
         <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('/images/favicons/apple-icon-57x57.png') }}">
