[Fix] Ref#5226 - change ozwillo logo and associated color
[Evo] Ref#5226 - Change Sesile logo and favicon


[Evo] Ref#5226 - Crop logo Sesile


[Evo] Ref#5226 - add favicon size 64x64 remove old sesile logo


[Evo] Ref#5226 - Return to old Sesile logo

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -4,7 +4,7 @@ $foundation-palette: (
         success: #39922c,
         warning: #f48c4f,
         alert: #c82d2e,
-        ozwillo: #663399,
+        ozwillo: #2c56a2,
 );
 
 $foundation-palette-hover: (
