--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -66,6 +66,11 @@ body, html {
   float: right;
 }
 
+.progress-bar-background {
+  left: 15%;
+  width: 82%;
+}
+
 @media screen and (max-width: 800px) {
   .dashboard-admin {
     display: block;
@@ -80,7 +85,13 @@ body, html {
     margin-top: 0;
     float: none;
   }
+}
 
+@media screen and (max-width: 1023px){
+  .progress-bar-background {
+    left: 0;
+    width: 98%;
+  }
 }
 
 .button {
@@ -1378,6 +1389,7 @@ progress[value]::-webkit-progress-bar {
   border-radius: 2px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
 }
+
 
 .doc-action-button {
   cursor: pointer;
