[Fix] - Fix table margin / change classeur tooltip position
fix: add table margin on all admin table except dashboard and tooltip diplay on top instead of bottom of button

--- a/app/Resources/assets/css/global.scss
+++ b/app/Resources/assets/css/global.scss
@@ -1405,7 +1405,7 @@ select {
 .tooltiptext {
   visibility: hidden;
   width: 120px;
-  top: 100%;
+  bottom: 100%;
   left: 50%;
   margin-left: -60px;
   background-color: black;
